crates/strider-analyze/tests/snapshots/v3__ppc32be__builtins__expect_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ r9", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "26" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "35" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="BitNot\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xffffff9b:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
